--- a/.classpath
+++ b/.classpath
@@ -3,9 +3,10 @@
 	<classpathentry kind="src" path="javaTest"/>
 	<classpathentry kind="src" path="testcases"/>
 	<classpathentry kind="src" path="testdata"/>
-	<classpathentry kind="src" path="actions"/>
+	<classpathentry kind="src" path="cores"/>
 	<classpathentry kind="src" path="interfaces"/>
 	<classpathentry kind="src" path="resource"/>
+	<classpathentry kind="src" path="actions"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER">
 		<attributes>
 			<attribute name="module" value="true"/>
