--- a/.classpath
+++ b/.classpath
@@ -63,5 +63,6 @@
 	<classpathentry kind="lib" path="libAllure/okio-1.14.1.jar"/>
 	<classpathentry kind="lib" path="libAllure/tika-core-1.20.jar"/>
 	<classpathentry kind="lib" path="libAllure/aspectjweaver-1.9.8.jar"/>
+	<classpathentry kind="lib" path="libraries/joda-time-2.10.12.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
