--- a/.classpath
+++ b/.classpath
@@ -64,5 +64,8 @@
 	<classpathentry kind="lib" path="libAllure/tika-core-1.20.jar"/>
 	<classpathentry kind="lib" path="libAllure/aspectjweaver-1.9.8.jar"/>
 	<classpathentry kind="lib" path="libraries/joda-time-2.10.12.jar"/>
+	<classpathentry kind="lib" path="libFaker/generex-1.0.2.jar"/>
+	<classpathentry kind="lib" path="libFaker/javafaker-1.0.1.jar"/>
+	<classpathentry kind="lib" path="libFaker/snakeyaml-1.23.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
