Practice: Write testcase for Nopcomerce Project

--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,3 +1,4 @@
 eclipse.preferences.version=1
+encoding//cores/utlities/MySQLConnection.java=UTF-8
 encoding//javaTest/eclipseTips/Topic_01_Debug.java=UTF-8
 encoding/<project>=UTF-8
